# Resurrithm

./: .editorconfig  .gitignore  CMakeLists.txt  README.md  Seaurchin.sln
Resources/Characters/: aiko.toml  tenshi.toml
Resources/Music/SAMPLE/Sample/: サンプル.sus
Resources/Scripts/: SettingList.toml
Resources/Skills/Abilities/: AirBoost.as  Boost.as  None.as
Resources/Skills/Skills/: airboost.toml  blank.toml  boost.toml
Resources/Skins/: SettingList.toml
Resources/Skins/Default/: Skin.as
Resources/Skins/Default/Scripts/: Play.as  Select.as  Setting.as  Title.as
Seaurchin/: AngelScriptManager.cpp  AngelScriptManager.h  AutoPlayerProcessor.cpp  CMakeLists.txt  CMakeLists.txt.bak  Character.cpp  Character.h  CharacterInstance.cpp  CharacterInstance.h  CharacterManager.cpp  CharacterManager.h  Config.h  Controller.cpp  Controller.h  Crc32.h  Debug.cpp  Debug.h  Easing.cpp  Easing.h  ExecutionManager.Interface.cpp  ExecutionManager.cpp  ExecutionManager.h  ExtensionManager.cpp  ExtensionManager.h  Font.cpp  Font.h  Interfaces.cpp  Interfaces.h  Main.cpp  Main.h  Misc.cpp  Misc.h  MoverFunctionExpression.cpp  MoverFunctionExpression.h  Music.cpp  Music.h  MusicsManager.cpp  MusicsManager.h  PlayableProcessor.cpp  PrecompiledHeader.h  (+47 more)
SeaurchinStandardLibrary/: CMakeLists.txt
libsus/: CMakeCache.txt  CMakeLists.txt  cmake_install.cmake
